# substreams-atomicassets

./: .gitignore  Cargo.toml  Makefile  README.md  schema.graphql  schema.sql  subgraph.yaml  substreams.yaml
proto/v1/: atomicassets.proto
src/: abi.rs  lib.rs  maps.rs  sinks.rs  utils.rs
src/pb/: antelope.atomicassets.v1.rs  mod.rs
