[package]
name = "atomicassets"
version = "0.0.1-dev"
authors = ["Paul <paulm@pinax.network>"]
description = "Substreams on EOS AtomicAssets NFT assets table"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-antelope = "0.1"
antelope = "0.1.5"
substreams-entity-change = "1.3"


[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"