[package]
name = "atomicassets"
version = "0.1.0-dev"
description = "Substreams on AtomicAssets standard"
edition = "2021"
authors = ["Denis <denis@pinax.network>", "Paul <paulm@pinax.network>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-antelope = "0.1"
antelope = "0.1.5"
substreams-entity-change = "1.3"


[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"